--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,293 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.friends-list {
+  width: 714px;
+  height: 634px;
+  padding: 30px 40px 0 40px;
   display: flex;
   flex-direction: column;
+  gap: 14px;
+}
+
+.friends-list h1 {
+  font-family: Inter;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 24px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #B1B9DB;
+  margin: 0;
+}
+
+.friends-list-item {
+  width: 100%;
+  height: 88px;
+  box-sizing: border-box;
+  padding: 14px 24px 14px 14px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.friends-list-item button {
+  width: 93px;
+  height: 40px;
+  padding: 8px 20px 8px 20px;
+  gap: 8px;
+  border-radius: 4px;
+  background: #2E57FA;
+  border: 1px solid #0637F9;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+
+
+.friends-list-item-info {
+  display: flex;
+  gap: 14px;
+  height: 100%;
+  align-items: center;
+}
+
+.friends-list-item-info img {
+  height: 60px;
+  width: 60px;
+  border-radius: 4px;
+}
+
+.friends-list-item-info h2 {
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #000000;
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+
+.friends-list-item-info-button {
+  padding: 0px 8px 0px 8px;
+  border-radius: 12px;
+  box-sizing: border-box;
+  border: 1px solid #B1B9DB;
+  line-height: 24px;
+  padding: 0px 8px 0px 8px;
+  font-size: 12px;
+  font-family: Inter;
+  font-weight: 500;
+  color: #B1B9DB;
+  width: max-content;
+}
+
+.available-status {
+  top: -8px;
+  left: -8px;
+  border-radius: 50%;
+  position: absolute;
+  height: 12px;
+  width: 12px;
+  border: 2px solid #FFFFFF
+}
+
+.details-page {
+  width: 608px;
+  height: 904px;
+  border-radius: 8px;
+  box-sizing: border-box;
+  padding: 60px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.details-page-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 4px;
+}
+
+.details-available-status {
+  top: -12px;
+  left: -12px;
+  border-radius: 50%;
+  position: absolute;
+  height: 15px;
+  width: 15px;
+  border: 4px solid #FFFFFF
+}
+
+.available {
+  background: #16BA44
+}
+
+.not-available {
+  background: #B1B9DB;
+}
+
+.details-page h1 {
+  margin: 23px 0 10px 0;
+  font-family: Inter;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 31.47px;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #000000;
+  width: max-content;
+}
+
+.friends-details-tabs {
+  display: flex;
+  margin-top: 30px;
+  gap: 10px;
+}
+
+.friends-details-tab {
+  height: 32px;
+  width: 65px;
+  box-sizing: border-box;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  color: #5C5F6B;
+}
+
+.friends-details-tab-active-bottom {
+  height: 2px;
+  width: 100%;
+  border-radius: 2px;
+  background: black;
+}
+
+.friends-details-tab-active {
+  color: #000000;
+}
+
+.info-tab {
+  padding: 28px;
+ /* box-shadow: 0px 10px 20px 0px #CCD0DF80;*/
+box-shadow: 0px 8px 2px -2px #CCD0DF80;
+}
+
+.info-tab h3 {
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #B1B9DB;
+  margin: 0;
+  width: 228px;
+}
+
+.info-tab h4 {
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #000000;
+  margin: 0;
+}
+
+.divider {
+  width: 100%;
+  border: 1px solid #B1B9DB80;
+  margin-top: 28px;
+  margin-bottom: 28px;
+}
+
+.bio-tab-line {
+  display: flex;
+}
+
+.photos-tab-wrapper {
+  width: 100%;
+  display: flex;
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.photos-tab-wrapper-image {
+  width: 136px;
+  height: 136px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.modal-wrapper {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #373E5AE5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.modal-wrapper-image {
+  width: 985px;
+  height: 656px;
+  object-fit: cover;
+}
+
+.modal-wrapper-close-button {
+  width: 44px;
+  height: 44px;
+  top: 60px;
+  right: 60px;
+  background: #FFFFFF1A;
+  border-radius: 8px;
+  position: absolute;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.back-to-home-button {
+  position: absolute;
+  height: 44px;
+  width: 44px;
+  left: -124px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
